# proxyswitch

./: README.md  pyproject.toml
src/proxyswitch/: __init__.py
